<resources>
    <string name="app_name">Mis finanzas</string>
    <string name="salary">Salario</string>
    <string name="add_salary">Agregar salario</string>
    <string name="txt_initial">Aún no has especificado tu salario.</string>
    <string name="txt_bad"> :( </string>
    <string name="txt_add_salary">Ingresa tu salario para empezar a manejar tus finanzas</string>
    <string name="txt_current">Actual</string>
    <string name="txt_dont_have_budget">Aún no tienen ningun objetivo.</string>
    <string name="txt_total_spent">Total objetivos</string>
    <string name="txt_total_spent_percent">Total objetivos(%)</string>
    <string name="txt_past_expenses">Gastos anteriores.</string>

</resources>
