<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_salary"
        android:id="@+id/btn_go_salary"
        android:layout_marginBottom="66dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_initial"
        android:id="@+id/textView2"
        android:textSize="@dimen/activity_vertical_stitle"
        android:textAlignment="center"
        android:layout_above="@+id/btn_go_salary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bad"
        android:id="@+id/textView3"
        android:textSize="@dimen/activity_vertical_sad"
        android:layout_marginBottom="57dp"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>