<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:id="@+id/textView4"
        android:layout_marginTop="143dp"
        android:textSize="@dimen/activity_vertical_label"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_add_salary"
        android:id="@+id/textView5"
        android:textSize="@dimen/activity_vertical_help_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_salary"
        android:id="@+id/btn_add_salary"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/txt_salary"
        android:layout_alignEnd="@+id/txt_salary"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txt_salary"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

</RelativeLayout>